--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,15 @@ dependencies = [
     "pymmcore-plus>=0.13.5",
     "useq-schema>=0.7.1",
 ]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.3.5",
+]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[project.scripts]
+tiled_acquisition = "tiled_acquisition.main:main"
